tests/snapshots/file@this@this_at_top_level.lox.snap
---
source: tests/common/mod.rs
description: "this; // Error at 'this': Can't use 'this' outside of a class.\n"
input_file: crafting_interpreters_test_files/this/this_at_top_level.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × can't use 'this' outside of a class
   ╭────
 1 │ this; // Error at 'this': Can't use 'this' outside of a class.
   · ──┬─
   ·   ╰── here
   ╰────
