tests/snapshots/file@unexpected_character.lox.snap
---
source: tests/common/mod.rs
description: "// [line 3] Error: Unexpected character.\n// [java line 3] Error at 'b': Expect ')' after arguments.\nfoo(a | b);\n"
input_file: crafting_interpreters_test_files/unexpected_character.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × [line 3] Error: Unexpected character: |
   ╭─[3:7]
 2 │ // [java line 3] Error at 'b': Expect ')' after arguments.
 3 │ foo(a | b);
   ·       ┬
   ·       ╰── here
   ╰────
