tests/snapshots/file@variable@duplicate_local.lox.snap
---
source: tests/common/mod.rs
description: "{\n  var a = \"value\";\n  var a = \"other\"; // Error at 'a': Already a variable with this name in this scope.\n}\n"
input_file: crafting_interpreters_test_files/variable/duplicate_local.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '{'
   ╭─[1:1]
 1 │ {
   · ┬
   · ╰── here
 2 │   var a = "value";
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[4:1]
 3 │   var a = "other"; // Error at 'a': Already a variable with this name in this scope.
 4 │ }
   · ┬
   · ╰── here
   ╰────
